//
//  AlertMessages.swift
//  R3PI
//
//  Created by Marco Maddalena on 17/07/2017.
//  Copyright © 2017 R3PI. All rights reserved.
//

struct AlertMessages {
    
    static let kAlert_Attention_Title               = "Attention"
    static let kAlert_Attention_Checkout_Title      = "Checkout"
    
    static let kAlert_ServiceNotAbailable_Message   = "Service not available."
    static let kAlert_ConnectionLost_Message        = "No Internet connection."
    static let kAlert_AddedElement_Message          = "Element Added."
    static let kAlert_RemovedElement_Message        = "Element Removed."
    static let kAlert_NoElement_Message             = "No elements in the basket."
    
    static let kAlert_Common_Button_Cancel          = "Cancel"
    static let kAlert_Common_Button_OK              = "OK"
    static let kAlert_Common_Button_Retry           = "Retry"
    
}
