...
        super.didReceiveMemoryWarning()
        // Dispose of any resources that can be recreated.
    }
    
    // MARK: private implementation
    func setUpLayout() {
        self.title = "Products";
        self.navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Basket", style: .plain, target: self, action: #selector(openBasket))
    }
    
    func openBasket(sender: UIBarButtonItem) {
        if BasketProvider.sharedInstance.basketCount > 0 {
            self.performSegue(withIdentifier: "BasketSegue", sender: nil)
        }else{
...
