...
    }
    
    // MARK: private implementation
    func setUpLayout() {
        self.title = "Basket";
        self.navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Close", style: .plain, target: self, action: #selector(close))
        self.navigationItem.leftBarButtonItem = UIBarButtonItem(title: "Empty", style: .plain, target: self, action: #selector(empty))
        tableBasket.allowsMultipleSelectionDuringEditing = false
    }
    
    func reloadBasketTable() {
        DispatchQueue.main.async {
            self.tableBasket.reloadData()
...
